/*
 * $Id: ChangeLog,v 1.4295 2005/09/02 18:22:53 druzus Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2005-09-02 11:55 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * include/hbregex.h
    * xCC/lCC adjustment

2005-09-02 20:10 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/bin/hb-func.sh
  * xharbour/xharbour.spec
  * xharbour/bin/pack_src.sh
  * xharbour/config/bsd/gcc.cf
  * xharbour/config/darwin/gcc.cf
  * xharbour/config/dos/djgpp.cf
  * xharbour/config/dos/rsx32.cf
  * xharbour/config/dos/watcom.cf
  * xharbour/config/hpux/gcc.cf
  * xharbour/config/linux/gcc.cf
  * xharbour/config/linux/owatcom.cf
  * xharbour/config/os2/gcc.cf
  * xharbour/config/sunos/gcc.cf
  * xharbour/config/w32/gcc.cf
  * xharbour/config/w32/mingw32.cf
  * xharbour/config/w32/watcom.cf
    + added lib pcrepos

  * xharbour/contrib/rdd_ads/ads0.prg
  * xharbour/contrib/rdd_ads/ads1.c
  * xharbour/contrib/rdd_ads/adsfunc.c
  * xharbour/contrib/rdd_ads/rddads.h
    + register ADS as three separate RDDs: ADSNTX, ADSCDX, ADT
      (ADS RDD left for backward compatibility) -  they do not
      need to set table type.
    + synchronize SET_DECIMALS with ADS
    + added support for relations between ADS and non ADS workareas
      and ADS only relations which cannot be resolved by ADS
    ! fixed index key conversion in ordscope() and ordkeyval()
    + added support for ordRelKeyPos() (common RDD version of
      AdsGetRelKeyPos()/AdsSetRelKeyPos()) and tuned the value calculated
      for tables without indexes
    ! fixed BOF/EOF/FOUND flag updating in child areas
    * changed some internal logic basing on information about pending
      relations and simplified ADS BOF updating
    ! fixed SEEK LAST to work like in Clipper
      TODO: the found flag should be updated to respect pending movement