@@ -446,7 +446,11 @@ STATIC s_cVer := "1.0.RC13" + Stringify( REVISION )
 
 //--------------------------------------------------------------//
 
+#ifdef _USE_APPMAIN_
+PROCEDURE _AppMain( sSource, p1, p2, p3, p4, p5, p6, p7, p8, p9 )
+#else
 PROCEDURE PP_Main( sSource, p1, p2, p3, p4, p5, p6, p7, p8, p9 )
+#endif
 
    LOCAL sIncludePath, nNext, sPath, sSwitch := ""
    LOCAL nAt, sParams, sPPOExt, aParams := {}
